fix deprecated constructor of Integer wrapper